--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ atomicwrites==1.4.0
 attrs==21.2.0
 colorama==0.4.4
 Django==4.0
+django-environ==0.8.1
 iniconfig==1.1.1
 packaging==21.3
 pluggy==1.0.0
+psycopg2-binary==2.9.2
 py==1.11.0
 pyparsing==3.0.6
 pytest==6.2.5
