--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          context: backend
+          context: .
           tags: inarash/parking
 
   deploy:
