--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: parking_system
 on: [push]
 
 jobs:
-  tests:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,7 @@ jobs:
   build_backend:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: lint
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -38,13 +38,12 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          context: backend
+          context: .
           tags: inarash/parking
 
   deploy:
     runs-on: ubuntu-latest
-    needs: 
-      - build_backend
+    needs: build_backend
     if:
       contains('
         refs/heads/main
@@ -58,7 +57,6 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          stack_file_name: docker-compose.yaml
           script: |
             echo ${{ secrets.DOCKER_PASSWORD }} | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
             sudo docker pull inarash/parking
